@@ -17,10 +17,13 @@ body {
   max-width: 100em;
 }
 
-.content {
+.container {
   @include card(1);
   background-color: $white;
   flex: 1;
   overflow-y: auto;
+}
+
+.content {
   padding: $base-spacing;
 }
