@@ -16,7 +16,12 @@ module Administrate
         deferred_class == other.deferred_class && options == other.options
       end
 
-      delegate :html_class, :permitted_attribute, to: :deferred_class
+      delegate(
+        :html_class,
+        :permitted_attribute,
+        :searchable?,
+        to: :deferred_class,
+      )
     end
   end
 end
